# StegoScope

./: README.md  pyproject.toml
stegoscope/: cli.py  core.py
stegoscope/assets/: banner.txt
