[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stegoscope"
version = "1.0.0"
description = "Automated steganography scanner for CTFs and security analysis."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Gage Johnson", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
  "click",
  "rich",
  "Pillow",
]

[project.urls]
Homepage = "https://github.com/gagejohnson/stegoscope"
Repository = "https://github.com/gagejohnson/stegoscope"

[project.scripts]
stegoscope = "stegoscope.cli:main"

